--- a/src/index.css
+++ b/src/index.css
@@ -190,7 +190,7 @@ img {
  * Correct overflow not hidden in IE 9/10/11.
  */
 
-svg:not(:) {
+svg:not() {
   overflow: hidden;
 }
 
@@ -433,5 +433,12 @@ th {
   font-family: 'BMDOHYEON';
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff') format('woff');
   font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
   font-style: normal;
 }
